Adds width, length, height indicators

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -158,7 +158,7 @@ eng:
         # insurance_expenses: "Primes d’assurance"
         # internal_transfers: "Virements internes"
         # inventory_variations: "Variations d’inventaires"
-        # irrigation_expenses: "Eau d'irrigation"
+        # irrigation_expenses: "Eau d’irrigation"
         # land_loans: "Emprunts fonciers"
         # land_loans_interests: "Intérêts des emprunts fonciers"
         land_parcel_asset: "Land parcel asset" #?
@@ -974,26 +974,27 @@ eng:
         # animal_sheet: "Fiche animal"
         # balance_sheet: "Bilan comptable"
         # deposit: "Remise en banque"
-        # entity_sheet: "Fiche Tiers"
+        # entity_sheet: "Fiche tiers"
         # general_journal: "Journal général"
         # general_ledger: "Grand livre"
         # income_statement: "Compte de résultat"
-        # incoming_delivery_docket: "Bon de reception"
+        # incoming_delivery_docket: "Bon de réception"
         # inventory: "Inventaire"
         # journal: "Journal"
         # manure_management_plan: "Plan de fumure"
+        # outgoing_deliveries_journal: "Journal de livraison"
         # outgoing_delivery_docket: "Bon de livraison"
-        # outgoing_delivery_journal: "Journal de livraisons"
         # phytosanitary_registry: "Registre phytosanitaire"
         # prescription: "Prescription vétérinaire"
         # profit_and_loss_statement: "Compte de résultat"
-        # purchase_estimate: "Devis d'achat"
-        # purchase_invoice: "Facture d'achat"
+        # purchase_estimate: "Devis d’achat"
+        # purchase_invoice: "Facture d’achat"
         # purchase_order: "Achat"
         # sales_estimate: "Devis de vente"
         # sales_invoice: "Facture de vente"
         # sales_order: "Commande de vente"
         # stocks: "Stocks"
+        # trial_balance: "Balance comptable"
         # veterinary_booklet: "Carnet vétérinaire"
       # name: "Types de document"
     entity_link_natures:
@@ -1127,7 +1128,7 @@ eng:
           choices:
             # caesarean: "Par césarienne"
             # cutting_calf: "En découpant le veau"
-            # few_help: "Avec un peu d'aide"
+            # few_help: "Avec un peu d’aide"
             # great_help: "Avec des difficultés"
             # without_help: "Sans aide"
         mammalia_born_cycle: #?
@@ -1200,9 +1201,11 @@ eng:
         freezing_point_temperature: "Freezing point temperature"
         # geographic_coordinate: "Coordonnées géographiques"
         ground_appearance: "Ground appearance" #?
+        # height: "Hauteur"
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production" #?
         inhibitors_presence: "Inhibitors presence"
+        # length: "Longueur"
         lipolysis: "Lipolysis"
         # livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Mammalia lactation state"
@@ -1235,6 +1238,7 @@ eng:
         urea_concentration: "Urea concentration"
         # usage_duration: "Durée d’utilisation"
         # water_content_rate: "Teneur en eau"
+        # width: "Largeur"
       name: "Name"
     languages:
       items:
