--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -538,8 +538,10 @@ fra:
         fertility_index: "Index de fertilité"
         freezing_point_temperature: "Point de solidification"
         geographic_coordinate: "Coordonnées géographiques"
+        height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        length: "Longueur"
         lipolysis: "Lipolyse"
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
@@ -571,6 +573,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         water_content_rate: "Teneur en eau"
+        width: "Largeur"
     cultivable_land_parcel:
       variety:
         additive: "Additif"
@@ -687,26 +690,27 @@ fra:
         animal_sheet: "Fiche animal"
         balance_sheet: "Bilan comptable"
         deposit: "Remise en banque"
-        entity_sheet: "Fiche Tiers"
+        entity_sheet: "Fiche tiers"
         general_journal: "Journal général"
         general_ledger: "Grand livre"
         income_statement: "Compte de résultat"
-        incoming_delivery_docket: "Bon de reception"
+        incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
         manure_management_plan: "Plan de fumure"
+        outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
-        outgoing_delivery_journal: "Journal de livraisons"
         phytosanitary_registry: "Registre phytosanitaire"
         prescription: "Prescription vétérinaire"
         profit_and_loss_statement: "Compte de résultat"
-        purchase_estimate: "Devis d'achat"
-        purchase_invoice: "Facture d'achat"
+        purchase_estimate: "Devis d’achat"
+        purchase_invoice: "Facture d’achat"
         purchase_order: "Achat"
         sales_estimate: "Devis de vente"
         sales_invoice: "Facture de vente"
         sales_order: "Commande de vente"
         stocks: "Stocks"
+        trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
     document_template:
       nature:
@@ -716,26 +720,27 @@ fra:
         animal_sheet: "Fiche animal"
         balance_sheet: "Bilan comptable"
         deposit: "Remise en banque"
-        entity_sheet: "Fiche Tiers"
+        entity_sheet: "Fiche tiers"
         general_journal: "Journal général"
         general_ledger: "Grand livre"
         income_statement: "Compte de résultat"
-        incoming_delivery_docket: "Bon de reception"
+        incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
         manure_management_plan: "Plan de fumure"
+        outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
-        outgoing_delivery_journal: "Journal de livraisons"
         phytosanitary_registry: "Registre phytosanitaire"
         prescription: "Prescription vétérinaire"
         profit_and_loss_statement: "Compte de résultat"
-        purchase_estimate: "Devis d'achat"
-        purchase_invoice: "Facture d'achat"
+        purchase_estimate: "Devis d’achat"
+        purchase_invoice: "Facture d’achat"
         purchase_order: "Achat"
         sales_estimate: "Devis de vente"
         sales_invoice: "Facture de vente"
         sales_order: "Commande de vente"
         stocks: "Stocks"
+        trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
     easement:
       variety:
@@ -1963,8 +1968,10 @@ fra:
         fertility_index: "Index de fertilité"
         freezing_point_temperature: "Point de solidification"
         geographic_coordinate: "Coordonnées géographiques"
+        height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        length: "Longueur"
         lipolysis: "Lipolyse"
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
@@ -1996,6 +2003,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         water_content_rate: "Teneur en eau"
+        width: "Largeur"
       content_indicator_unit:
         ampere: "Ampère"
         are: "Are"
@@ -2388,8 +2396,10 @@ fra:
         fertility_index: "Index de fertilité"
         freezing_point_temperature: "Point de solidification"
         geographic_coordinate: "Coordonnées géographiques"
+        height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        length: "Longueur"
         lipolysis: "Lipolyse"
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
@@ -2421,6 +2431,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         water_content_rate: "Teneur en eau"
+        width: "Largeur"
     product_nature:
       derivative_of:
         additive: "Additif"
@@ -2963,8 +2974,10 @@ fra:
         fertility_index: "Index de fertilité"
         freezing_point_temperature: "Point de solidification"
         geographic_coordinate: "Coordonnées géographiques"
+        height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        length: "Longueur"
         lipolysis: "Lipolyse"
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
@@ -2996,6 +3009,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         water_content_rate: "Teneur en eau"
+        width: "Largeur"
     production_support_marker:
       indicator_name:
         animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
@@ -3011,8 +3025,10 @@ fra:
         fertility_index: "Index de fertilité"
         freezing_point_temperature: "Point de solidification"
         geographic_coordinate: "Coordonnées géographiques"
+        height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        length: "Longueur"
         lipolysis: "Lipolyse"
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
@@ -3044,6 +3060,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         water_content_rate: "Teneur en eau"
+        width: "Largeur"
     sale_item:
       indicator_name:
         animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
@@ -3059,8 +3076,10 @@ fra:
         fertility_index: "Index de fertilité"
         freezing_point_temperature: "Point de solidification"
         geographic_coordinate: "Coordonnées géographiques"
+        height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        length: "Longueur"
         lipolysis: "Lipolyse"
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
@@ -3092,6 +3111,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         water_content_rate: "Teneur en eau"
+        width: "Largeur"
     subscription_nature:
       entity_link_nature:
         direct_kinship: "Parenté directe"
