Adds first First Run builder

--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1037,6 +1037,7 @@ fra:
     reminder_submissive: "Soumis à la relance"
     repartitions: "Repartitions"
     repeatable: "Répétable"
+    # reporter: "Reporter"
     reproductor: "Reproducteur" #?
     required: "Obligatoire"
     reservoir: "Réservoir"
