--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1500,10 +1500,12 @@ eng:
         # animal_waste_building_division: "Zone des déchets organiques"
         # anti_slug: "Anti-limace"
         # apple_crop: "Verger de pommiers"
+        # aubues_land_parcel: "Parcelle sur craie Nord Vienne (Aubues)"
         # baler: "Botteleuse"
         # barley_crop: "Culture d’orge"
         # barley_grain: "Grain d’orge"
         # barley_seed_25: "Semence d’orge 25kg"
+        # black_valley_land_parcel: "Parcelle de terre noire de vallées"
         # brassicaceae_fungicide: "Fongicide colza"
         # building: "Bâtiment"
         # building_division: "Pièce ou zone d’un bâtiment"
@@ -1513,7 +1515,10 @@ eng:
         # calf: "Veau"
         # cattle_herd: "Troupeau de bovins"
         # cattle_manure: "Fumier de bovins"
+        # champagne_land_parcel: "Parcelle sur craie Sud Charente et Charente-Martime  (terre de champagne)"
         # chemical_fertiliser_division: "Emplacement de stockage des engrais"
+        # clay_land_parcel: "Parcelle d'argile lourde"
+        # clay_limestone_land_parcel: "Parcelle argilo-calcaire (Groies)"
         # complete_herbicide: "Herbicide total"
         # coop:ammonitre_33, 5%_vr: "ammonitre COOP 33,5% vr"
         # coop:ficelle_filogamm_350_bob_5kg: "ficelle filogamm 350 bob 5kg"
@@ -1536,10 +1541,12 @@ eng:
         # female_adult_cattle_herd: "Troupeau de vache laitière"
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
+        # flap_silt_land_parcel: "Parcelle de limons battants"
         # forager: "Ensileuse"
         # gas: "Gaz"
         # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
+        # granite_arena_land_parcel: "Parcelle de sol sur arène granitique"
         # grass: "Herbe"
         # hard_wheat_grain: "Graine de blé dur"
         # hard_wheat_seed_25: "Semence de blé dur 25kg"
@@ -1547,6 +1554,7 @@ eng:
         # hard_wheat_straw_bales: "Bottes de paille de blé dur"
         # hay_rake: "Andaineur"
         # helianthus_herbicide: "Herbicide tournesol"
+        # hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
@@ -1567,11 +1575,20 @@ eng:
         # plum_crop: "Verger de pruniers"
         # poacea_herbicide: "Herbicide graminées"
         # poaceae_fungicide: "Fongicide céréales"
+        # reaper: "Moissonneuse-batteuse"
+        # red_chesnut_land_parcel: "Parcelle de terres rouges à chataigniers"
         # riflexine: "Riflexine"
         # running_water: "Eau du réseau"
+        # sand_land_parcel: "Parcelle sableuse"
+        # sandy_clay_land_parcel: "Parcelle argilo-sableuse"
+        # sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
         # screed_building: "Construction béton (silo, chape, terrasse)"
         # seed: "Semence"
         # silage: "Ensilage"
+        # silt_land_parcel: "Parcelle limoneuse"
+        # silt_schist_land_parcel: "Parcelle limoneuse sur schiste ou gneiss"
+        # silty_clay_land_parcel: "Parcelle argilo-limoneuse"
+        # silty_clay_loam_land_parcel: "Parcelle limono-argileuse"
         # small_equipment: "Petit matériel"
         # sorghum_crop: "Culture de sorgho"
         # sower: "Semoir"
@@ -1585,6 +1602,7 @@ eng:
         # temporary_meadow_crop: "Culture de prairie temporaire"
         # tractor: "Tracteur"
         # trailer: "Remorque"
+        # valley_terrace_land_parcel: "Parcelle de sol de terrasse de vallée"
         # vine_grape_berry: "Grappe de raisin"
         # vine_grape_crop: "Culture de vigne"
         # vine_grape_must: "Mout de raisin"
@@ -1676,6 +1694,7 @@ eng:
         # natural_water: "Eau de pluie / du puit"
         # organic_fertilizer: "Engrais organique"
         # plow: "Charrue"
+        # reaper: "Moissonneuse-batteuse"
         # running_water: "Eau du réseau"
         # seed: "Semence"
         # small_equipment: "Petit matériel"
@@ -1804,6 +1823,8 @@ eng:
         # itis-tsn: "Identifiant ITIS"
       choices: #?
       items:
+        # acetal: "Acetal"
+        # actilact: "Actilact"
         # additive: "Additif"
         # anas: "Palmipède"
         animal: "Animal"
@@ -1813,10 +1834,16 @@ eng:
         # apache: "Blé Apache"
         # apis: "Apidés"
         # asteraceae: "Astéracée"
+        # aubues_soil: "Sols sur craie Nord Vienne (Aubues)"
         # aves: "Oiseau"
         # baler: "Botteleuse"
         bioproduct: "Bioproduct"
+        # black_valley_soil: "Terres noires de vallées"
         # bos: "Bovin"
+        # brassica_napus: "Colza"
+        # brassica_nigra: "Moutarde noire"
+        # brassica_rapa: "Navet"
+        # brassicaceae: "Crucifères"
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
         # cabernet_franc: "Cabernet franc"
@@ -1824,13 +1851,17 @@ eng:
         # caphorn: "Blé Caphorn"
         # capra: "Caprin"
         # carignan: "Carignan"
+        # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
         # chemical_fertiliser: "Engrais chimique"
+        # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
+        # clay_soil: "Terre d'argile lourde"
         # cultivable_land_parcel: "Parcelle culturale"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
         # electricity: "Electricité"
         equipment: "Equipment"
+        # flap_silt_soil: "Limons battants"
         # forager: "Ensileuse"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
@@ -1838,6 +1869,7 @@ eng:
         # gallus: "Galinacée"
         # gas: "Essence"
         # grain: "Grain"
+        # granite_arena_soil: "Sol sur arène granitique"
         # grenache: "Grenache"
         # grenache_noir: "Grenache noir"
         # harvest: "Récolte"
@@ -1845,6 +1877,7 @@ eng:
         # helianthus: "Tournesol"
         # herbicide: "Produit herbicide"
         # hordeum: "Orge"
+        # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatter"
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
@@ -1867,6 +1900,7 @@ eng:
         # molluscicide: "Produit molluscicide"
         # mower: "Faucheuse"
         organic_matter: "Organic matter"
+        # osteichthyes: "Poissons osseux"
         # ovis: "Ovin"
         phytosanitary: "Phytosanitary" #?
         # pinot_noir: "Pinot noir"
@@ -1880,14 +1914,23 @@ eng:
         product_group: "Product group"
         property_title: "Property title"
         # prunus: "Prunier"
+        # reaper: "Moissonneuse-batteuse"
+        # red_chesnut_soil: "Terres rouges à chataigniers"
         # salmo: "Salmonidé"
         # salt: "Sel"
         # sand: "Sable"
+        # sand_soil: "Sol sableux"
+        # sandy_clay_loam_soil: "Sol limono-argileux"
+        # sandy_clay_soil: "Sol argilo-sableux"
         # sauvignon: "Sauvignon"
         # sauvignon_blanc: "Sauvignon blanc"
         # seed: "Semence"
         service: "Service"
         # settlement: "Agencement"
+        # silt_schist_soil: "Limons sur schiste ou gneiss"
+        # silt_soil: "Limon"
+        # silty_clay_loam_soil: "Sol limono-argileux"
+        # silty_clay_soil: "Sol argilo-limoneux"
         # sorghum: "Sorgho"
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
@@ -1895,6 +1938,7 @@ eng:
         # straw: "Pailles"
         # sub_zone: "Sous zone"
         # sus: "Porcin"
+        # swamp_peaty_soil: "Terre de marais tourbeux"
         # syrah: "Syrah"
         # tank: "Réservoir"
         # tractor: "Tracteur"
@@ -1903,6 +1947,7 @@ eng:
         # triticum_durum: "Blé dur"
         # triticum_spelta: "Épeautre"
         # ugni_blanc: "Ugni blanc"
+        # valley_terrace_soil: "Sols de terrasse de vallée"
         # vitis: "Vigne"
         # vitis_vinifera: "Vitis vinifera"
         # water: "Eau"
