update manure management plan ( in progress). based on PPF specifications

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -992,6 +992,7 @@ fra:
     client_code: "Code cl."
     client_informations: "Informations client"
     client_phone: "Téléphone"
+    clusters_work_number: "Numéro d'ilot(s)"
     close: "Fermer"
     close_financial_year: "Clôturer l’exercice"
     close_journal: "Clôturer le journal"
@@ -1158,6 +1159,7 @@ fra:
     ground_appearance: "Aspect du sol"
     group: "Groupe"
     groups: "Groupes"
+    harvest_at: "Récolté le"
     help: "Aide"
     hint: "Astuce\_: %{value}"
     historic: "Historique"
@@ -1456,6 +1458,8 @@ fra:
     pretax_amount: "Montant HT"
     previous: "Précédent"
     previous_bank_statement: "Solde du relevé précédent N°%{number}"
+    previous_plant_name: "Nom de la culture précédente"
+    previous_production_name: "Nom de la production précédente"
     price: "Prix"
     price_amount: "Prix HT"
     price_amount_with_taxes: "Prix TTC"
@@ -1619,6 +1623,8 @@ fra:
     simplified: "Régime du réel simplifié"
     source: "Source de données"
     sowable: "Semable"
+    sowed_at: "Semé le"  
+    soil_varieties: "Nature des sols"
     start: "Du"
     state: "État"
     stock: "Stock"
@@ -1863,6 +1869,7 @@ fra:
       other: "%{count} ans"
     y: "Oui"
     yearly: "Annuelle"
+    yield: "Rendement"
   notifications:
     access_denied: "Vous n’avez pas le droit d’accéder à cette page. %{reason} (%{url})"
     bad_file: "Le fichier ne semble pas correspondre."
