--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1058,6 +1058,7 @@ arb:
     # close_journal: "Clôturer le journal"
     closed: "مغلق"
     # clostridial_spores_concentration: "Concentration en spores butyriques"
+    # clusters_work_number: "Numéro d'ilot(s)"
     code: "الرمز" #?
     # collected_taxes: "TVA déductibles / collectées"
     column: "البيانات"
@@ -1253,6 +1254,7 @@ arb:
     # ground_appearance: "Aspect du sol"
     # group: "Groupe"
     # groups: "Groupes"
+    # harvest_at: "Récolté le"
     help: "المساعدة"
     hint: "تلميح&nbsp;: %{value}"
     # historic: "Historique"
@@ -1600,6 +1602,8 @@ arb:
     # pretax_amount: "Montant HT"
     previous: "السابق"
     previous_bank_statement: "رقم الكشف المصرفي السابق%{number}"
+    # previous_plant_name: "Nom de la culture précédente"
+    # previous_production_name: "Nom de la production précédente"
     # price: "Prix"
     price_amount: "Prix HT"
     price_amount_with_taxes: "القيمة مع كامل الضريبة"
@@ -1794,8 +1798,10 @@ arb:
     # show: "Afficher"
     # sign_out: "Se déconnecter"
     simplified: "نظام واقعي مبسط"
+    # soil_varieties: "Nature des sols"
     source: "مصدر البيانات"
     # sowable: "Semable"
+    # sowed_at: "Semé le"
     start: "ابتداء من"
     state: "الحالة"
     # stock: "Stock"
@@ -2060,6 +2066,7 @@ arb:
       # other: "%{count} ans"
     y: "نعم"
     yearly: "Annuelle"
+    # yield: "Rendement"
   notifications:
     access_denied: " ليس لديك الصلاحية لبلوغ هذه الصفحة %{reason} (%{url})"
     bad_file: "لا يبدو ان الملفات متطابقة"
