--- a/config/locales/fra/prints/manure_management_plan.xml
+++ b/config/locales/fra/prints/manure_management_plan.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="land_parcel_fertilization_list" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="786" leftMargin="28" rightMargin="28" topMargin="28" bottomMargin="28" isTitleNewPage="true" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="130"/>
-	<property name="ireport.y" value="413"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="384"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.jrtx"]]></template>
 	<style name="Title" fontName="DejaVu Sans" fontSize="30" isBold="true" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
@@ -79,7 +79,7 @@
 		<parameter name="cultivable_land_parcel_id" class="java.lang.String"/>
 		<parameter name="cultivable_land_parcel_area" class="java.lang.Double"/>
 		<queryString language="xPath">
-			<![CDATA[/campaigns/campaign/cultivable_land_parcel/production/intervention/inputs/input[ancestor::cultivable_land_parcel/@id=$P{cultivable_land_parcel_id}]]]>
+			<![CDATA[/campaigns/campaign/cultivable_land_parcel/support/intervention/inputs/input[ancestor::cultivable_land_parcel/@id=$P{cultivable_land_parcel_id}]]]>
 		</queryString>
 		<field name="input" class="java.lang.String">
 			<fieldDescription><![CDATA[id]]></fieldDescription>
@@ -103,7 +103,7 @@
 			<fieldDescription><![CDATA[ancestor::intervention/@stopped-at]]></fieldDescription>
 		</field>
 		<field name="name" class="java.lang.String">
-			<fieldDescription><![CDATA[ancestor::production/@name]]></fieldDescription>
+			<fieldDescription><![CDATA[ancestor::support/@variant-name]]></fieldDescription>
 		</field>
 		<field name="input_nitrogen_concentration" class="java.lang.String">
 			<fieldDescription><![CDATA[nitrogen-concentration]]></fieldDescription>
@@ -167,7 +167,7 @@
 		<fieldDescription><![CDATA[ancestor::campaigns/@entity-name]]></fieldDescription>
 	</field>
 	<field name="area" class="java.lang.String">
-		<fieldDescription><![CDATA[@area]]></fieldDescription>
+		<fieldDescription><![CDATA[@net-surface-area]]></fieldDescription>
 	</field>
 	<field name="name" class="java.lang.String">
 		<fieldDescription><![CDATA[@name]]></fieldDescription>
@@ -182,13 +182,34 @@
 		<fieldDescription><![CDATA[@shape-svg]]></fieldDescription>
 	</field>
 	<field name="production_name" class="java.lang.String">
-		<fieldDescription><![CDATA[production/@name]]></fieldDescription>
+		<fieldDescription><![CDATA[support/@variant-name]]></fieldDescription>
 	</field>
 	<field name="area_value" class="java.lang.Double">
-		<fieldDescription><![CDATA[@area-in-hectare]]></fieldDescription>
+		<fieldDescription><![CDATA[@net-surface-area-in-hectare]]></fieldDescription>
 	</field>
 	<field name="entity_address" class="java.lang.String">
 		<fieldDescription><![CDATA[ancestor::campaigns/@address]]></fieldDescription>
+	</field>
+	<field name="clusters-work-number" class="java.lang.String">
+		<fieldDescription><![CDATA[@clusters-work-number]]></fieldDescription>
+	</field>
+	<field name="soil-varieties" class="java.lang.String">
+		<fieldDescription><![CDATA[@soil-varieties]]></fieldDescription>
+	</field>
+	<field name="previous_production_name" class="java.lang.String">
+		<fieldDescription><![CDATA[support/@previous-production-name]]></fieldDescription>
+	</field>
+	<field name="sowed_at" class="java.lang.String">
+		<fieldDescription><![CDATA[support/@sowed-at]]></fieldDescription>
+	</field>
+	<field name="harvest_at" class="java.lang.String">
+		<fieldDescription><![CDATA[support/@harvest-at]]></fieldDescription>
+	</field>
+	<field name="grains_yield" class="java.lang.String">
+		<fieldDescription><![CDATA[support/@grains-yield]]></fieldDescription>
+	</field>
+	<field name="provisionnal_grains_yield" class="java.lang.String">
+		<fieldDescription><![CDATA[support/@provisionnal-grains-yield]]></fieldDescription>
 	</field>
 	<group name="campaign" isStartNewPage="true">
 		<groupExpression><![CDATA[$F{campaign}]]></groupExpression>
@@ -208,6 +229,12 @@
 		<groupExpression><![CDATA[$F{id}]]></groupExpression>
 		<groupHeader>
 			<band height="161">
+				<rectangle radius="10">
+					<reportElement uuid="dee27788-3e3b-4e29-9f33-264c5be10dc5" style="title" x="254" y="48" width="154" height="97"/>
+				</rectangle>
+				<rectangle radius="10">
+					<reportElement uuid="bd5f3d5d-eda9-40e0-ac15-a97942d216e8" style="title" x="2" y="49" width="247" height="96"/>
+				</rectangle>
 				<textField isStretchWithOverflow="true">
 					<reportElement uuid="767321ef-0cb0-45b7-9d28-e511bc11c4d2" style="sub-title" x="2" y="0" width="784" height="24"/>
 					<textElement textAlignment="Justified" verticalAlignment="Middle"/>
@@ -235,7 +262,7 @@
 					<text><![CDATA[Culture]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="0f22a24e-779f-4c89-b703-44e223e147c5" style="label" x="10" y="93" width="69" height="37"/>
+					<reportElement uuid="0f22a24e-779f-4c89-b703-44e223e147c5" style="label" x="10" y="92" width="69" height="23"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="Open Sans" size="10"/>
 					</textElement>
@@ -247,11 +274,11 @@
 					<textFieldExpression><![CDATA[$F{production_name}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="36931cf2-a5e2-44f0-acf1-45084b45ad25" style="label" x="289" y="71" width="69" height="44"/>
+					<reportElement uuid="36931cf2-a5e2-44f0-acf1-45084b45ad25" style="label" x="433" y="93" width="89" height="24"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="Open Sans" size="10"/>
 					</textElement>
-					<text><![CDATA[Rendement prévu / réalisé]]></text>
+					<text><![CDATA[Rendement prévu]]></text>
 				</staticText>
 				<textField pattern="###0.00 Ha" isBlankWhenNull="true">
 					<reportElement uuid="b3834841-2c13-4098-90f2-dd5003f7e126" style="base" x="79" y="49" width="170" height="22"/>
@@ -264,11 +291,78 @@
 					</reportElement>
 					<imageExpression><![CDATA[net.sf.jasperreports.renderers.BatikRenderer.getInstanceFromText($F{svg_path})]]></imageExpression>
 				</image>
+				<staticText>
+					<reportElement uuid="c607e8d7-30af-4324-ba34-bef93348350c" style="label" x="259" y="56" width="69" height="37"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="Open Sans" size="10"/>
+					</textElement>
+					<text><![CDATA[Ilôt(s) PAC]]></text>
+				</staticText>
+				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" isBlankWhenNull="true">
+					<reportElement uuid="5c75c8f9-fa94-4e37-a75a-e8a0ffbea5f0" style="base" x="328" y="56" width="67" height="37"/>
+					<textElement verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{clusters-work-number}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement uuid="7e846c4d-aea6-43f9-b155-8be1c39dbb73" style="label" x="259" y="93" width="69" height="36"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="Open Sans" size="10"/>
+					</textElement>
+					<text><![CDATA[Type de sol]]></text>
+				</staticText>
+				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" isBlankWhenNull="true">
+					<reportElement uuid="b9710c8e-8b43-4e1d-bbdd-39522ee0fac3" style="base" x="328" y="93" width="67" height="36"/>
+					<textElement verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{soil-varieties}]]></textFieldExpression>
+				</textField>
+				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" isBlankWhenNull="true">
+					<reportElement uuid="998c4b75-37b6-4c71-82cb-65c1b0768700" style="base" x="79" y="92" width="170" height="22"/>
+					<textElement verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{previous_production_name}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement uuid="c778b5f1-519e-4cd5-b98e-73eeba39dcc7" style="label" x="433" y="116" width="89" height="28"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="Open Sans" size="10"/>
+					</textElement>
+					<text><![CDATA[Rendement réalisé]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="f3a432ac-4aea-41f4-a464-7d10e7594130" style="label" x="433" y="49" width="89" height="22"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="Open Sans" size="10"/>
+					</textElement>
+					<text><![CDATA[Date de semis]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="16cd9442-22dc-4dfe-97e4-5ba5d347d272" style="label" x="433" y="70" width="89" height="23"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="Open Sans" size="10"/>
+					</textElement>
+					<text><![CDATA[Date de récolte]]></text>
+				</staticText>
+				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" pattern="dd/MM/yyyy" isBlankWhenNull="true">
+					<reportElement uuid="16ea4441-d6b6-4091-889e-dab92704fd83" style="base" x="522" y="49" width="71" height="22"/>
+					<textElement verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{sowed_at}]]></textFieldExpression>
+				</textField>
+				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" pattern="dd/MM/yyyy" isBlankWhenNull="true">
+					<reportElement uuid="b623543d-b15d-4c5e-9665-b20156bc5971" style="base" x="522" y="70" width="71" height="23"/>
+					<textElement verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{harvest_at}]]></textFieldExpression>
+				</textField>
+				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" isBlankWhenNull="true">
+					<reportElement uuid="ae80d9ca-8683-4e9d-b592-4c6a67a2b892" style="base" x="522" y="117" width="71" height="27"/>
+					<textElement verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{grains_yield}]]></textFieldExpression>
+				</textField>
+				<textField evaluationTime="Group" evaluationGroup="land_parcel_group" isBlankWhenNull="true">
+					<reportElement uuid="89d8cc69-741b-461b-ab50-885731a8403f" style="base" x="522" y="93" width="71" height="23"/>
+					<textElement verticalAlignment="Middle"/>
+					<textFieldExpression><![CDATA[$F{provisionnal_grains_yield}]]></textFieldExpression>
+				</textField>
 				<rectangle radius="10">
-					<reportElement uuid="bd5f3d5d-eda9-40e0-ac15-a97942d216e8" style="title" x="2" y="49" width="247" height="81"/>
-				</rectangle>
-				<rectangle radius="10">
-					<reportElement uuid="dee27788-3e3b-4e29-9f33-264c5be10dc5" style="title" x="277" y="49" width="247" height="81"/>
+					<reportElement uuid="e2a51ead-739f-4e40-a1a7-246abfc186d1" style="title" x="420" y="47" width="188" height="97"/>
 				</rectangle>
 			</band>
 		</groupHeader>
