add provisionnal manure management plan and linked method.

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -825,7 +825,8 @@ fra:
         incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
-        manure_management_plan: "Plan de fumure"
+        manure_management_plan: "Cahier d'épandage"
+        provisionnal_manure_management_plan: "Plan prévisionnel de fumure (PPF)"
         outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
         phytosanitary_registry: "Registre phytosanitaire"
