--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1250,6 +1250,7 @@ arb:
     # generate: "Générer"
     give_discount: "منح خصومات"
     go: "صلاحية"
+    # grains_yield: "Rendement grains"
     graph_statistics: "رسومات احصائية"
     # ground_appearance: "Aspect du sol"
     # group: "Groupe"
@@ -1497,6 +1498,8 @@ arb:
     new_value: "قيمة جديدة"
     next: "التالي"
     # nitrogen_concentration: "Teneur en azote"
+    # nitrogen_input_prev: "Apport prévisionnel en azote"
+    # nitrogen_input_real: "Apport réalisé en azote"
     no_commercial: "-- دون تداول --"
     # no_contacts: "Aucune adresse définie pour %{name}"
     # no_data: "Aucune donnée"
@@ -1647,6 +1650,7 @@ arb:
     # profit_and_loss_statement: "Compte de résultat"
     # profitability: "Rentabilité"
     # protein_matters_concentration: "Teneur en matières protéïques"
+    # provisionnal_grains_yield: "Rendement prévisionnel en grains"
     purchase: "الطلب"
     purchase_create: "اضافة شراء جديد" #?
     # purchase_items: "Lignes de l’achat"
