--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1097,6 +1097,7 @@ eng:
     generate: "Generate"
     give_discount: "Give discount"
     go: "Go"
+    # grains_yield: "Rendement grains"
     graph_statistics: "Graph statistics"
     # ground_appearance: "Aspect du sol"
     group: "Group"
@@ -1313,6 +1314,8 @@ eng:
     new_value: "New value"
     next: "Next"
     # nitrogen_concentration: "Teneur en azote"
+    # nitrogen_input_prev: "Apport prévisionnel en azote"
+    # nitrogen_input_real: "Apport réalisé en azote"
     no_commercial: "No commercial"
     no_contacts: "No address defined for %{name}"
     # no_data: "Aucune donnée"
@@ -1449,6 +1452,7 @@ eng:
     # profit_and_loss_statement: "Compte de résultat"
     profitability: "Profitability"
     # protein_matters_concentration: "Teneur en matières protéïques"
+    # provisionnal_grains_yield: "Rendement prévisionnel en grains"
     purchase: "Purchase"
     purchase_items: "Purchase items"
     purchase_steps:
