--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -801,12 +801,13 @@ fra:
         incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
-        manure_management_plan: "Plan de fumure"
+        manure_management_plan: "Cahier d'épandage"
         outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
         phytosanitary_registry: "Registre phytosanitaire"
         prescription: "Prescription vétérinaire"
         profit_and_loss_statement: "Compte de résultat"
+        provisionnal_manure_management_plan: "Plan prévisionnel de fumure (PPF)"
         purchase_estimate: "Devis d’achat"
         purchase_invoice: "Facture d’achat"
         purchase_order: "Achat"
@@ -831,12 +832,13 @@ fra:
         incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
-        manure_management_plan: "Plan de fumure"
+        manure_management_plan: "Cahier d'épandage"
         outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
         phytosanitary_registry: "Registre phytosanitaire"
         prescription: "Prescription vétérinaire"
         profit_and_loss_statement: "Compte de résultat"
+        provisionnal_manure_management_plan: "Plan prévisionnel de fumure (PPF)"
         purchase_estimate: "Devis d’achat"
         purchase_invoice: "Facture d’achat"
         purchase_order: "Achat"
