--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -826,12 +826,12 @@ fra:
         inventory: "Inventaire"
         journal: "Journal"
         manure_management_plan: "Cahier d'épandage"
-        provisionnal_manure_management_plan: "Plan prévisionnel de fumure (PPF)"
         outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
         phytosanitary_registry: "Registre phytosanitaire"
         prescription: "Prescription vétérinaire"
         profit_and_loss_statement: "Compte de résultat"
+        provisionnal_manure_management_plan: "Plan prévisionnel de fumure (PPF)"
         purchase_estimate: "Devis d’achat"
         purchase_invoice: "Facture d’achat"
         purchase_order: "Achat"
@@ -1029,6 +1029,8 @@ fra:
         potassium_concentration: "Teneur en potassium"
         protein_concentration_index: "TP (Taux Protéïque)"
         protein_matters_concentration: "Teneur en matières protéïques"
+        # provisionnal_grains_yield: "Provisionnal grains yield"
+        # provisionnal_irrigation_water_input: "Provisionnal irrigation water input"
         reproductor: "Reproducteur"
         sex: "Sexe"
         shape: "Forme"
@@ -1582,6 +1584,7 @@ fra:
         kilowatt: "Kilowatt"
         kilowatt_hour: "Kilowatt par heure"
         liter: "Litre"
+        # liter_per_square_meter: "Liter per square meter"
         mass_percent: "Pourcentage de masse"
         megawatt: "Mégawatt"
         meter: "Métre"
@@ -1597,6 +1600,7 @@ fra:
         pair: "Paire"
         percent: "Pourcent"
         quintal: "Quintal"
+        # quintal_per_hectare: "Quintal per hectare"
         second: "Seconde"
         square_meter: "Mètre carré"
         ten: "Dix"
