--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1027,6 +1027,7 @@ jpn:
     # generate: "Générer"
     # give_discount: "Octroyer une remise"
     # go: "Valider"
+    # grains_yield: "Rendement grains"
     # graph_statistics: "Statistiques graphiques"
     # ground_appearance: "Aspect du sol"
     # group: "Groupe"
@@ -1243,6 +1244,8 @@ jpn:
     # new_value: "Nouvelle valeur"
     # next: "Suivant"
     # nitrogen_concentration: "Teneur en azote"
+    # nitrogen_input_prev: "Apport prévisionnel en azote"
+    # nitrogen_input_real: "Apport réalisé en azote"
     # no_commercial: "— Sans commercial —"
     # no_contacts: "Aucune adresse définie pour %{name}"
     # no_data: "Aucune donnée"
@@ -1373,6 +1376,7 @@ jpn:
     # profit_and_loss_statement: "Compte de résultat"
     # profitability: "Rentabilité"
     # protein_matters_concentration: "Teneur en matières protéïques"
+    # provisionnal_grains_yield: "Rendement prévisionnel en grains"
     # purchase: "Achat"
     # purchase_items: "Lignes de l’achat"
     purchase_steps:
