--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -934,12 +934,13 @@ arb:
         # incoming_delivery_docket: "Bon de réception"
         # inventory: "Inventaire"
         # journal: "Journal"
-        # manure_management_plan: "Plan de fumure"
+        # manure_management_plan: "Cahier d'épandage"
         # outgoing_deliveries_journal: "Journal de livraison"
         # outgoing_delivery_docket: "Bon de livraison"
         # phytosanitary_registry: "Registre phytosanitaire"
         # prescription: "Prescription vétérinaire"
         # profit_and_loss_statement: "Compte de résultat"
+        # provisionnal_manure_management_plan: "Plan prévisionnel de fumure (PPF)"
         # purchase_estimate: "Devis d’achat"
         # purchase_invoice: "Facture d’achat"
         # purchase_order: "Achat"
