eneralizes use of "cultivation" in procedures

--- a/config/locales/eng/procedures.yml
+++ b/config/locales/eng/procedures.yml
@@ -51,7 +51,7 @@ eng:
     # child: "Nouveau né"
     # cropper: "Moissonneuse batteuse"
     # cropper_driver: "Conducteur de moissonneuse batteuse"
-    # culture: "Culture"
+    # cultivation: "Culture"
     # driver: "Conducteur"
     # fertilizer: "Engrais"
     # fertilizer_to_spread: "Engrais à épandre"
@@ -72,7 +72,7 @@ eng:
     # mother_animal: "Mère"
     # mower: "Faucheuse"
     # mower_driver: "Conducteur de faucheuse"
-    # plant: "Plantes, Culture"
+    # plant: "Culture végétale"
     # plow: "Charrue"
     # second_child: "Second nouveau né"
     # seeder: "Semoir"
