--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -1180,7 +1180,7 @@ fra:
         child: "Nouveau né"
         cropper: "Moissonneuse batteuse"
         cropper_driver: "Conducteur de moissonneuse batteuse"
-        culture: "Culture"
+        cultivation: "Culture"
         driver: "Conducteur"
         fertilizer: "Engrais"
         fertilizer_to_spread: "Engrais à épandre"
@@ -1201,7 +1201,7 @@ fra:
         mother_animal: "Mère"
         mower: "Faucheuse"
         mower_driver: "Conducteur de faucheuse"
-        plant: "Plantes, Culture"
+        plant: "Culture végétale"
         plow: "Charrue"
         second_child: "Second nouveau né"
         seeder: "Semoir"
